# audio_manager_ros2

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml
include/audio_manager_ros2/: audio_server.hpp  backend.hpp  config.hpp  null_backend.hpp  player_backend.hpp
launch/: audio_server.launch.py
msg/: AudioEvent.msg  AudioStatus.msg
src/: audio_server_main.cpp
src/core/: audio_server.cpp  config.cpp  null_backend.cpp  player_backend.cpp
srv/: ReloadConfig.srv  SetMode.srv  Stop.srv
